...
    <string name="product_battle_speed">Скорость %1$dx</string>
    <string name="product_battle_speed_value">%1$dx</string>
    <string name="product_battle_pause">Пауза</string>
    <string name="product_battle_resume">Продолжить</string>
    <string name="product_battle_exit">Покинуть бой</string>
    <string name="product_battle_field_description">Поле боя. Ядро %1$d из %2$d. Врагов %3$d. Союзников %4$d. Точек строительства %5$d.</string>
    <string name="product_battle_enemy_description">Враг %1$s, здоровье %2$d из %3$d</string>
    <string name="product_battle_ally_description">Союзник %1$s, здоровье %2$d из %3$d</string>
    <string name="product_battle_slot_empty">Точка %1$d свободна</string>
    <string name="product_battle_slot_tower">Точка %1$d: %2$s, уровень %3$d</string>
    <string name="product_battle_build">Построить</string>
    <string name="product_battle_upgrade">Улучшить</string>
    <string name="product_battle_sell">Разобрать</string>
...
